--- a/pre-build/html/codingList.html
+++ b/pre-build/html/codingList.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     @@include('./include/head.html')
     <style>
-        *{text-align: center;}
-        th{font-size: 22px;}
-        td{font-size: 15px;}
-        a{color: blue; text-decoration: underline;}
-        .desc{margin:30px 0; font-size: 26px; color: #000; font-weight: bold;}
+        * {
+            text-align: center;
+        }
+
+        th {
+            font-size: 22px;
+        }
+
+        td {
+            font-size: 15px;
+        }
+
+        a {
+            color: blue;
+            text-decoration: underline;
+        }
+
+        .desc {
+            margin: 30px 0;
+            font-size: 26px;
+            color: #000;
+            font-weight: bold;
+        }
     </style>
 </head>
+
 <body>
     <div id="wrap">
         <div class="desc">서브 페이지 공통</div>
@@ -66,6 +86,15 @@
                         </td>
                         <td></td>
                         <td>2022-01-14</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>
+                            <a href="../html/error.html">error.html</a>
+                        </td>
+                        <td></td>
+                        <td>2022-01-20</td>
                         <td></td>
                     </tr>
                 </tbody>
@@ -155,7 +184,8 @@
                     <tr>
                         <td>2</td>
                         <td>
-                            <a href="../html/gnb/gnb-menu-hover-full-dropdown.html">gnb-menu-hover-full-dropdown.html</a>
+                            <a
+                                href="../html/gnb/gnb-menu-hover-full-dropdown.html">gnb-menu-hover-full-dropdown.html</a>
                         </td>
                         <td></td>
                         <td>2021-12-22</td>
@@ -359,7 +389,8 @@
                     <tr>
                         <td>4</td>
                         <td>
-                            <a href="../html/input/input-textareaStyle.html" target="_blank">input-textareaStyle.html</a>
+                            <a href="../html/input/input-textareaStyle.html"
+                                target="_blank">input-textareaStyle.html</a>
                         </td>
                         <td></td>
                         <td>2021-12-12</td>
@@ -446,10 +477,20 @@
                     <tr>
                         <td>6</td>
                         <td>
-                            <a href="../html/layout/layout-floatingMenu.html" target="_blank">layout-floatingMenu.html</a>
+                            <a href="../html/layout/layout-floatingMenu.html"
+                                target="_blank">layout-floatingMenu.html</a>
                         </td>
                         <td></td>
                         <td>2022-01-19</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>
+                            <a href="../html/layout/layout-flex.html" target="_blank">layout-flex.html</a>
+                        </td>
+                        <td></td>
+                        <td>2022-01-20</td>
                         <td></td>
                     </tr>
                 </tbody>
@@ -479,7 +520,8 @@
                     <tr>
                         <td>1</td>
                         <td>
-                            <a href="../html/popup/popup-popup-showhide.html" target="_blank">popup-popup-showhide.html</a>
+                            <a href="../html/popup/popup-popup-showhide.html"
+                                target="_blank">popup-popup-showhide.html</a>
                         </td>
                         <td></td>
                         <td>2022-01-09</td>
@@ -508,4 +550,5 @@
         </div>
     </div>
 </body>
+
 </html>
