반응형 작업중

--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -176,19 +176,24 @@
         </ul>
       </div>
 
-      <div class="moreArea">
-        <button type="button" class="btnMobileMore">
-          <span class="hidden">메뉴 열기</span>
-        </button>
+      <div class="headArea">
+          <div class="inner">
+            <div class="moreArea">
+              <button type="button" class="btnMobileMore">
+                <span class="hidden">메뉴 열기</span>
+              </button>
+            </div>
+      
+            <div class="backArea">
+              <button type="button" class="btnBack">
+                <span class="hidden">뒤로가기</span>
+              </button>
+            </div>
+            @@include('include/util.html')
+          </div>
       </div>
 
-      <div class="backArea">
-        <button type="button" class="btnBack">
-          <span class="hidden">뒤로가기</span>
-        </button>
-      </div>
-
-      @@include('include/util.html')
+      
 
       <div class="rightArea">
         <div class="inner">
