모바일 수정

--- a/pre-build/html/footer/footer-footer-basic.html
+++ b/pre-build/html/footer/footer-footer-basic.html
@@ -264,7 +264,7 @@ background-color: #444;
   span{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
 }
 #footer{width: 100%; background-color: #292a2d;
-  >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
+  >.inner{padding: 40px; max-width: 1200px; margin: 0 auto;
     .logoArea{margin-bottom: 20px;
       a{display: inline-block;}
       img{width: 200px;}
@@ -324,7 +324,7 @@ background-color: #444;
 }
 
 .wrap #footer > .inner {
-  padding-top: 40px;
+  padding: 40px;
   max-width: 1200px;
   margin: 0 auto;
 }
