--- a/pre-build/html/footer/footer-footer-fixed.html
+++ b/pre-build/html/footer/footer-footer-fixed.html
@@ -253,7 +253,7 @@
                               <code class="language-scss">
 .wrap{position: relative; width: 100%; height: 100%;}
 #footer{position: absolute; bottom: 0; width: 100%; background-color: #292a2d;
-    >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
+    >.inner{padding: 40px; max-width: 1200px; margin: 0 auto;
         .logoArea{margin-bottom: 20px;
             a{display: inline-block;}
             img{width: 200px;}
@@ -299,7 +299,7 @@
 }
 
 .wrap #footer > .inner {
-    padding-top: 40px;
+    padding: 40px;
     max-width: 1200px;
     margin: 0 auto;
 }
