라이브러리 테스트 전 커밋

--- a/pre-build/html/popup/popup-toast.html
+++ b/pre-build/html/popup/popup-toast.html
@@ -311,6 +311,20 @@ $('#exToast').fadeOut();
       </button>
     </div>
   </div>
+  <script>
+    $(document).ready(function(){
+      $('.btnResult').on({
+        "click":function(){
+          if($('#frameBody').css('display') == 'block'){
+              $('#exToast').fadeIn();
+              setTimeout(function(){
+                  $('#exToast').fadeOut();
+              },4000);
+          }
+        }
+      })
+  });
+  </script>
 </body>
 
 </html>
