다크모드 주석작성중

--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,6 +17,7 @@
   <script src="../js/darkmode.js" defer></script>
   <title>Component css</title>
 </head>
+
 <body>
   <div id="wrap">
     <div id="container">
@@ -24,18 +26,23 @@
           <li>
             <a href="../html/main.html" title="메인으로">
               <img src="../images/common/logo.png" class="lightLogo" alt="서브 메인로고">
-              <img src="../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고"/>
+              <img src="../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
             </a>
           </li>
-          <li class="noDepth active">
+          <li class="active">
             <span>
               <a href="sub_first.html" title="홈">Home</a>
             </span>
           </li>
           <li>
             <span>
-                <a href="#none" title="Header">Header</a>
+              <a href="#none" title="Header">Header
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -51,7 +58,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="GNB">GNB</a>
+              <a href="#none" title="GNB">GNB
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -70,7 +82,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Footer">Footer</a>
+              <a href="#none" title="Footer">Footer
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -83,7 +100,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Layout">Layout</a>
+              <a href="#none" title="Layout">Layout
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -114,7 +136,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Input">Input</a>
+              <a href="#none" title="Input">Input
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -136,7 +163,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Scroll element">Scroll element</a>
+              <a href="#none" title="Scroll element">Scroll element
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -149,7 +181,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Custom">Custom</a>
+              <a href="#none" title="Custom">Custom
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -165,7 +202,12 @@
           </li>
           <li>
             <span>
-                <a href="#none" title="Popup">Popup</a>
+              <a href="#none" title="Popup">Popup
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li>
@@ -181,7 +223,12 @@
           </li>
           <li>
             <span title="Etc">
-                <a href="#none" title="Etc">Etc</a>
+              <a href="#none" title="Etc">Etc
+                <svg viewBox="0 0 700 700">
+                  <path
+                    d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
+                </svg>
+              </a>
             </span>
             <ul class="leftSubMenu">
               <li class="dep3Cont">
