--- a/pre-build/html/codingList.html
+++ b/pre-build/html/codingList.html
@@ -17,7 +17,7 @@
         }
 
         a {
-            color: blue;
+            color: orange;
             text-decoration: underline;
         }
 
@@ -582,8 +582,7 @@
                     <tr>
                         <td>2</td>
                         <td>
-                            <a href="../html/etc/etc-rotate.html" target="_blank"
-                                target="_blank">etc-rotate.html</a>
+                            <a href="../html/etc/etc-rotate.html" target="_blank" target="_blank">etc-rotate.html</a>
                         </td>
                         <td></td>
                         <td>2022-02-02</td>
