다크모드 변수정리 및 수정 (fix #3,#5)

--- a/pre-build/html/etc/etc-accordion.html
+++ b/pre-build/html/etc/etc-accordion.html
@@ -218,7 +218,7 @@
               </a>
             </span>
             <ul class="leftSubMenu block">
-              <li class="dep3Cont">
+              <li class="dep3Cont on">
                 <a href="#none" title="Animation element">Animation element
                     <svg width="18" height="18" viewBox="0 0 18 18" class="unfold">
                         <path id="ios-plus-empty" d="M27,18.633H18.563V27H17.368V18.633H9V17.438h8.367V9h1.195v8.438H27Z" transform="translate(-9 -9)"/>
@@ -227,9 +227,9 @@
                         <rect id="사각형_14" data-name="사각형 14" width="16" height="1"/>
                       </svg>
                 </a>
-                <ul class="dep3">
+                <ul class="dep3 block">
                   <li>
-                    <a href="#none" title="Top button" onclick="prevent(event)">Top button</a>
+                    <a href="../etc/etc-top-button.html" title="Top button">Top button</a>
                   </li>
                   <li>
                     <a href="../etc/etc-rotate.html" title="Rotate element">Rotate element</a>
@@ -240,12 +240,12 @@
                   <li>
                     <a href="../etc/etc-fadeinout.html" title="Fade in/out">Fade in/out</a>
                   </li>
-                  <li>
-                    <a href="../etc/etc-accordion.html" title="Accordion">Accordion</a>
+                  <li class="active">
+                    <a href="../etc/etc-accordion.html" title="Accordion"onclick="prevent(event)">Accordion</a>
                   </li>
                 </ul>
               </li>
-              <li class="active">
+              <li>
                 <a href="../etc/etc-ellipsis.html" title="Text ellipsis">Text ellipsis</a>
               </li>
               <li class="disabled">
