--- a/pre-build/html/input/input-selectStyle.html
+++ b/pre-build/html/input/input-selectStyle.html
@@ -495,6 +495,9 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
                       <ul>
                         <li>
                           <span>선택</span>
+                          <svg width="10.289" height="6" viewBox="0 0 10.289 6">
+                            <path id="angle-down" d="M10.655,12.022a.326.326,0,0,1-.1.237l-4.8,4.8a.325.325,0,0,1-.474,0l-4.8-4.8a.325.325,0,0,1,0-.474l.515-.515a.325.325,0,0,1,.474,0L5.51,15.321l4.052-4.052a.325.325,0,0,1,.474,0l.515.515A.326.326,0,0,1,10.655,12.022Z" transform="translate(-0.366 -11.166)"/>
+                          </svg>
                           <ul class="selList">
                             <li>
                               <span>리스트1</span>
@@ -516,6 +519,9 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
                       <ul>
                         <li>
                           <span>선택</span>
+                          <svg width="10.289" height="6" viewBox="0 0 10.289 6">
+                            <path id="angle-down" d="M10.655,12.022a.326.326,0,0,1-.1.237l-4.8,4.8a.325.325,0,0,1-.474,0l-4.8-4.8a.325.325,0,0,1,0-.474l.515-.515a.325.325,0,0,1,.474,0L5.51,15.321l4.052-4.052a.325.325,0,0,1,.474,0l.515.515A.326.326,0,0,1,10.655,12.022Z" transform="translate(-0.366 -11.166)"/>
+                          </svg>
                           <ul class="selList">
                             <li>
                               <span>리스트1</span>
