--- a/pre-build/html/input/input-textareaStyle.html
+++ b/pre-build/html/input/input-textareaStyle.html
@@ -278,16 +278,7 @@
                   <pre>
                               <code class="language-html">
 &lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;placeholder&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;textarea class="full" placeholder="placeholder는 입력창에 대한 힌트를 제공합니다."&gt;&lt;/textarea&gt;
-&lt;/div&gt;
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;disabled&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;textarea class="full" disabled autofocus placeholder="입력창을 비활성화 시키며, 비활성화 상태의 스타일도 입힐 수 있습니다."&gt;&lt;/textarea&gt;
+    &lt;textarea class="full"&gt;&lt;/textarea&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -352,17 +343,7 @@ textarea.full {
             <div class="resultArea">
               <div class="inner">
                 <div class="textBox">
-                  <div class="titleH3">
-                    <h3>placeholder</h3>
-                  </div>
-                  <textarea class="full" placeholder="placeholder는 입력창에 대한 힌트를 제공합니다."></textarea>
-                </div>
-                <div class="textBox">
-                  <div class="titleH3">
-                    <h3>disabled</h3>
-                  </div>
-                  <textarea class="full" disabled autofocus
-                    placeholder="입력창을 비활성화 시키며, 비활성화 상태의 스타일도 입힐 수 있습니다."></textarea>
+                  <textarea class="full"></textarea>
                 </div>
               </div>
             </div>
