--- a/pre-build/html/etc/etc-accordion.html
+++ b/pre-build/html/etc/etc-accordion.html
@@ -113,8 +113,51 @@
               <li class="disabled">
                 <a href="#none" title="Slide">Slide</a>
               </li>
-              <li>
-                <a href="../layout/layout-flex.html" title="Flex">Flex</a>
+              <li class="dep3Cont">
+                <a href="#none" title="Flex Layout">Flex Layout
+                  <svg width="18" height="18" viewBox="0 0 18 18" class="unfold">
+                    <path id="ios-plus-empty" d="M27,18.633H18.563V27H17.368V18.633H9V17.438h8.367V9h1.195v8.438H27Z"
+                      transform="translate(-9 -9)"></path>
+                  </svg>
+                  <svg width="16" height="1" viewBox="0 0 16 1" class="fold">
+                    <rect id="사각형_14" data-name="사각형 14" width="16" height="1"></rect>
+                  </svg>
+                </a>
+                <ul class="dep3">
+                  <li>
+                    <a href="../layout/layout-flex.html" title="flex box">flex box</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-direction.html" title="flex-direction">flex-direction</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-justify-content.html" title="justify-content">justify-content</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-align-items.html" title="align-items">align-items</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-basis.html" title="flex-basis">flex-basis</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-grow.html" title="flex-grow">flex-grow</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-shrink.html" title="flex-shrink">flex-shrink</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-option.html" title="flex">flex</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-flex-wrap.html" title="flex-wrap">flex-wrap</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-gap.html" title="gap">gap</a>
+                  </li>
+                  <li>
+                    <a href="../layout/layout-order.html" title="order">order</a>
+                  </li>
+                </ul>
               </li>
               <li class="disabled">
                 <a href="#none" title="Grid">Grid</a>
@@ -220,12 +263,13 @@
             <ul class="leftSubMenu block">
               <li class="dep3Cont on">
                 <a href="#none" title="Animation element">Animation element
-                    <svg width="18" height="18" viewBox="0 0 18 18" class="unfold">
-                        <path id="ios-plus-empty" d="M27,18.633H18.563V27H17.368V18.633H9V17.438h8.367V9h1.195v8.438H27Z" transform="translate(-9 -9)"/>
-                      </svg>
-                      <svg width="16" height="1" viewBox="0 0 16 1" class="fold">
-                        <rect id="사각형_14" data-name="사각형 14" width="16" height="1"/>
-                      </svg>
+                  <svg width="18" height="18" viewBox="0 0 18 18" class="unfold">
+                    <path id="ios-plus-empty" d="M27,18.633H18.563V27H17.368V18.633H9V17.438h8.367V9h1.195v8.438H27Z"
+                      transform="translate(-9 -9)" />
+                  </svg>
+                  <svg width="16" height="1" viewBox="0 0 16 1" class="fold">
+                    <rect id="사각형_14" data-name="사각형 14" width="16" height="1" />
+                  </svg>
                 </a>
                 <ul class="dep3 block">
                   <li>
@@ -241,7 +285,7 @@
                     <a href="../etc/etc-fadeinout.html" title="Fade in/out">Fade in/out</a>
                   </li>
                   <li class="active">
-                    <a href="../etc/etc-accordion.html" title="Accordion"onclick="prevent(event)">Accordion</a>
+                    <a href="../etc/etc-accordion.html" title="Accordion" onclick="prevent(event)">Accordion</a>
                   </li>
                 </ul>
               </li>
@@ -507,135 +551,155 @@ $(function(){
               </div>
             </div>
             <div class="btnArea end">
-                <button type="button" class="button Bgblue btnResult">
-                  <span>결과보기</span>
-                  <svg viewBox="0 0 7.152 11.14">
-                    <path id="_777" data-name="777"
-                      d="M11.571,7.893,6.443,13.014a.434.434,0,0,1-.622,0L.694,7.893a.442.442,0,0,1,0-.629l1.147-1.14a.434.434,0,0,1,.622,0L6.133,9.794,9.8,6.124a.434.434,0,0,1,.622,0l1.147,1.14a.442.442,0,0,1,0,.629Z"
-                      transform="translate(-5.993 11.703) rotate(-90)"></path>
-                  </svg>
-                </button>
-              </div>
+              <button type="button" class="button Bgblue btnResult">
+                <span>결과보기</span>
+                <svg viewBox="0 0 7.152 11.14">
+                  <path id="_777" data-name="777"
+                    d="M11.571,7.893,6.443,13.014a.434.434,0,0,1-.622,0L.694,7.893a.442.442,0,0,1,0-.629l1.147-1.14a.434.434,0,0,1,.622,0L6.133,9.794,9.8,6.124a.434.434,0,0,1,.622,0l1.147,1.14a.442.442,0,0,1,0,.629Z"
+                    transform="translate(-5.993 11.703) rotate(-90)"></path>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <div id="frameBody" class="overflow-y">
-        <div id="toast">
-          <span>Esc 혹은 우측 상단 X 버튼을 눌러 결과창을 닫을 수 있습니다. </span>
-        </div>
-        <div class="btnArea">
-          <button type="button" class="frameClose">
-            <svg viewBox="0 0 16 16">
-              <path id="icon"
-                d="M5.707,7.121,1.414,11.414,0,10,4.293,5.707,0,1.414,1.414,0,5.707,4.293,10,0l1.414,1.414L7.121,5.707,11.414,10,10,11.414,5.707,7.121Z"
-                transform="translate(2.293 2.293)"></path>
-            </svg>
-            <span class="hidden">프레임 창닫기</span>
-          </button>
-        </div>
-        <div class="wrap pre acn allRes">
-          <div class="container">
-            <div class="resultCont">
-                <div class="accordion">
-                    <ul>
-                        <li>
-                            <div class="head">
-                                <p>타이틀</p>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
-                                    <path id="arrow-down" d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
-                                    <path id="arrow-up" d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="cont">
-                                <div class="inner">
-                                    <div class="txtArea">
-                                        <p>내용내용내용내용내용내용내용내용내용</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="head">
-                                <p>타이틀</p>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
-                                    <path id="arrow-down" d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
-                                    <path id="arrow-up" d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="cont">
-                                <div class="inner">
-                                    <div class="txtArea">
-                                        <p>내용내용내용내용내용내용내용내용내용</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="head">
-                                <p>타이틀</p>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
-                                    <path id="arrow-down" d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
-                                    <path id="arrow-up" d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="cont">
-                                <div class="inner">
-                                    <div class="txtArea">
-                                        <p>내용내용내용내용내용내용내용내용내용</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="head">
-                                <p>타이틀</p>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
-                                    <path id="arrow-down" d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
-                                    <path id="arrow-up" d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="cont">
-                                <div class="inner">
-                                    <div class="txtArea">
-                                        <p>내용내용내용내용내용내용내용내용내용</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="head">
-                                <p>타이틀</p>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
-                                    <path id="arrow-down" d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                                <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
-                                    <path id="arrow-up" d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z" transform="translate(-6 -10.5)" fill-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="cont">
-                                <div class="inner">
-                                    <div class="txtArea">
-                                        <p>내용내용내용내용내용내용내용내용내용</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+      <div id="toast">
+        <span>Esc 혹은 우측 상단 X 버튼을 눌러 결과창을 닫을 수 있습니다. </span>
+      </div>
+      <div class="btnArea">
+        <button type="button" class="frameClose">
+          <svg viewBox="0 0 16 16">
+            <path id="icon"
+              d="M5.707,7.121,1.414,11.414,0,10,4.293,5.707,0,1.414,1.414,0,5.707,4.293,10,0l1.414,1.414L7.121,5.707,11.414,10,10,11.414,5.707,7.121Z"
+              transform="translate(2.293 2.293)"></path>
+          </svg>
+          <span class="hidden">프레임 창닫기</span>
+        </button>
+      </div>
+      <div class="wrap pre acn allRes">
+        <div class="container">
+          <div class="resultCont">
+            <div class="accordion">
+              <ul>
+                <li>
+                  <div class="head">
+                    <p>타이틀</p>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
+                      <path id="arrow-down"
+                        d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
+                      <path id="arrow-up"
+                        d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="cont">
+                    <div class="inner">
+                      <div class="txtArea">
+                        <p>내용내용내용내용내용내용내용내용내용</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="head">
+                    <p>타이틀</p>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
+                      <path id="arrow-down"
+                        d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
+                      <path id="arrow-up"
+                        d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="cont">
+                    <div class="inner">
+                      <div class="txtArea">
+                        <p>내용내용내용내용내용내용내용내용내용</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="head">
+                    <p>타이틀</p>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
+                      <path id="arrow-down"
+                        d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
+                      <path id="arrow-up"
+                        d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="cont">
+                    <div class="inner">
+                      <div class="txtArea">
+                        <p>내용내용내용내용내용내용내용내용내용</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="head">
+                    <p>타이틀</p>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
+                      <path id="arrow-down"
+                        d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
+                      <path id="arrow-up"
+                        d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="cont">
+                    <div class="inner">
+                      <div class="txtArea">
+                        <p>내용내용내용내용내용내용내용내용내용</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="head">
+                    <p>타이틀</p>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowDown">
+                      <path id="arrow-down"
+                        d="M10.381,10.5,23.525,23.644,36.669,10.5l4.381,4.381L23.525,32.406,6,14.881Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                    <svg width="29" height="14" viewBox="0 0 35.05 21.906" class="arrowUp">
+                      <path id="arrow-up"
+                        d="M6,28.025,23.525,10.5,41.05,28.025l-4.381,4.381L23.525,19.262,10.381,32.406Z"
+                        transform="translate(-6 -10.5)" fill-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="cont">
+                    <div class="inner">
+                      <div class="txtArea">
+                        <p>내용내용내용내용내용내용내용내용내용</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
+    </div>
     @@include('include/popup-share.html')
     <div class="popup mobileResult">
       <div class="cont">
