다운로드기능 추가 및 js 코드정리

--- a/pre-build/html/custom/custom-toolTip.html
+++ b/pre-build/html/custom/custom-toolTip.html
@@ -406,6 +406,7 @@ transition: .5s; z-index: 150;
             <div class="resultArea web">
               <div class="inner flex">
                 <div class="toolTipBox">
+                  <p>마우스를 올려보세요!</p>
                   <div class="exTooltip">
                     <span>툴팁 예제</span>
                   </div>
