--- a/pre-build/html/etc/etc-top-button.html
+++ b/pre-build/html/etc/etc-top-button.html
@@ -391,7 +391,16 @@ $(function(){
                 </div>
               </div>
             </div>
-            <div class="btnArea end">
+            <div class="btnArea sb">
+              <a href="/images/ico/ico-top.svg" download="etc-top-button-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
+                <span>다운로드</span>
+                <svg width="24px" height="24px" version="1.1" viewBox="0 0 700 700">
+                  <g>
+                    <path d="m336.56 409.92c8.8477 8.625 23.016 8.625 31.863 0l113.74-113.74c7.3359-8.3984 7.4492-21.055 0.22266-29.566-8.0625-9.6328-22.512-10.922-32.086-2.7461l-75.098 75.098v-263.7c0-12.543-10.191-22.68-22.734-22.68-12.543 0-22.738 10.133-22.738 22.68v263.87l-75.039-75.266c-0.78516-0.83984-1.625-1.6797-2.5195-2.4062-9.6328-8.1758-23.969-7-32.031 2.7422-8.1211 9.5781-6.8906 23.855 2.6875 31.977z"/>
+                    <path d="m532 370.95c-12.602 0-22.793 10.246-22.793 22.734v68.32h-318.47v-68.32c0-12.543-10.191-22.734-22.734-22.734s-22.793 10.246-22.793 22.734v68.32c0 25.145 20.441 45.527 45.527 45.527h318.47c25.145 0 45.527-20.328 45.527-45.527v-68.32c0-12.488-10.191-22.734-22.734-22.734z"/>
+                  </g>
+                  </svg>
+              </a>
               <button type="button" class="button Bgblue btnResult">
                 <span>결과보기</span>
                 <svg viewBox="0 0 7.152 11.14">
